Moved masses into section 4.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -53,6 +53,7 @@
 \newcommand{\todo}[1]{\textcolor{red}{#1}}
 \newcommand{\tocheck}[1]{\textcolor{green}{Check: #1}}
 \newcommand{\citeme}{{\color{magenta} CITE ME!}}
+\newcommand{\ilya}[1]{\textcolor{blue}{{\it Ilya to Alison:} #1}}
 
 \def\be{\begin{equation}}
 \def\ee{\end{equation}}
@@ -183,33 +184,11 @@ quasar jet, presumably aligned with the BH spin axis, is misaligned with the orb
 
 \section{Formation scenarios}\label{form}
 
-\textcolor{red}{Section needs an intro.}
+\textcolor{red}{Section needs an intro.}  \ilya{Isn't the paragraph that follows an intro?  I hoped it would serve that purpose...}
 
 When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star \textcolor{red}{(Need to say why people were surprised by BHs not NSs.)} -- and even more surprised by the high black hole masses, in excess of the observed black hole masses in X-ray binaries.  Should this be a source of surprise? 
-The short answer is that the masses themselves should not be surprising -- but perhaps the very existence of merging neutron stars and black holes should be.  But let us start with the masses.  
-
-\subsubsection{Understanding the masses of the merging black holes}
-
-\textcolor{red}{Needs intro summary sentence. Placeholder: The apparent discrepancy between BH masses in GW mergers and those in observed X-ray binaries can be understood in terms of the chemical composition of the stars that formed them.}
-
-\textbf{Compact object masses over time:} Once formed by stellar collapse or supernova, the compact objects in the binaries of interest will have roughly constant masses. The first compact object to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit, which corresponds to an equilibrium between gravity and the pressure on infalling material of the radiation released during accretion, would take more than 100 million years; the massive companion will only survive for a small fraction of that time. After formation of the second compact object, there is very little further accretion in the system. The mass of each compact remnant is thus almost equal to its mass at formation. 
-
-\textbf{Compact object masses at formation:} Compact object masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the physics of the collapse itself. \textcolor{red}{--what does it mean to say that the mass is set by the physics?} Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core -- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron -- determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the compact object remnant.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy \textcolor{red}{(are we generally ok with saying "heavy" throughout as equivalent to "massive"? I probably wouldn't, but if it's standard then ok.)} black holes in X-ray binaries. The answer has to do with the mass loss from massive stars. 
-
-\textbf{The importance of stellar winds:} The intense radiation from massive stars -- whose luminosities may be a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than 1/3 of the initial stellar mass. \textcolor{red}{(adding a sentence or two here to spell out your point!)}   Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity -- the fraction of the star's mass that's in elements heavier than hydrogen and helium -- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Forming heavier black holes, like those observed by LIGO, requires stellar progenitors born in regions with lower metallicity. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
-
-\textbf{Why LIGO sources might come from low-metallicity stars:} Because metals are produced by stars, low-metallicity regions are typically those with fewer preceding stellar generations.  Several plausible scenarios could explain why the LIGO sources came from low-metallicity stars. For the more distant sources, explanations include formation in low-mass metal-poor galaxies, while for relatively local mergers the parent stars could have formed in the very distant past, with a long delay time between star formation and black hole merger \citep{Belczynski:2016}. \textcolor{red}{This issue is discussed in more detail in Section ??? -- which I haven't read in detail yet, so I might have distorted the meaning of this paragraph... sorry!.}
-
-\begin{figure}
-	\centering
-	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
-	\includegraphics[width=0.7\textwidth]{BHremnantdelayed.png}
-	\caption{\label{fig:BHremnant} Remnant compact object mass for a given zero-age main sequence stellar mass in the absence of an interacting binary companion, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' supernova fallback prescription \citep{Fryer:2012}, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).}
-\end{figure}
-%\todo{Include mass plots from Ben, or reuse Chris's old plot?, or attached?}
-
-\subsubsection{The Separation Question}
-The more surprising question, and perhaps the key problem of gravitational-wave astronomy, is why compact object binaries ever merge at all.  And this one boils down to separation.  
+The short answer is that the masses themselves should not be surprising, and we will return to the masses (and spins) later. On the other hand, perhaps the very existence of merging neutron stars and black holes should be.   In fact, we might formulate a ``fundamental theorem of gravitational-wave astrophysics'': it is challenging to bring compact objects to merge within the age of the Universe.  And this one boils down to their separation.  
+%erhaps the key problem of gravitational-wave astronomy, is why compact object binaries ever merge at all.  
 
 Gravitational-wave emission is a very strong function of separation.  Gravitational waves can certainly remove a lot of energy very quickly: the peak gravitational-wave luminosity during a compact binary merger is a few thousandth of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ erg per second, such mergers 'outshine' all the stars in the visible Universe combined.  But gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, so widely separated binaries lose energy and inspiral very slowly.  \autoref{fig:periapsis} shows the maximum periapsis separation that a binary composed of two equal-mass compact objects can have and still merge within the age of the Universe.  Thirty-solar mass double black holes such as those responsible for GW150914 would have had to start with a separation of less than 50 solar radii, or a quarter of the distance from the Earth to the Sun, if they were to be driven to merger by gravitational-wave emission alone.
 
@@ -278,9 +257,35 @@ Merging binary black holes are rare outcomes indeed!  [Merging binary neutron st
 
 The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$; for an average binary mass of $\sim M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ correspond to a binary black hole merger rate of $\sim 100$ Gpc$^{-3}$ yr$^{-1}$, or 10 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care to account for the time-varying star formation history convolved with the time delay distribution.  The value of this back-of-the-envelope analysis is not so much in producing a merger rate that matches the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).
 
+
+\subsection{Understanding the masses of the merging black holes}
+
+\textcolor{red}{Needs intro summary sentence. Placeholder: The apparent discrepancy between BH masses in GW mergers and those in observed X-ray binaries can be understood in terms of the chemical composition of the stars that formed them.}
+
+\textbf{Compact object masses over time:} Once formed by stellar collapse or supernova, the compact objects in the binaries of interest will have roughly constant masses. The first compact object to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit, which corresponds to an equilibrium between gravity and the pressure on infalling material of the radiation released during accretion, would take more than 100 million years; the massive companion will only survive for a small fraction of that time. After formation of the second compact object, there is very little further accretion in the system. The mass of each compact remnant is thus almost equal to its mass at formation. 
+
+\textbf{Compact object masses at formation:} Compact object masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the physics of the collapse itself. \textcolor{red}{--what does it mean to say that the mass is set by the physics?} Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core -- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron -- determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the compact object remnant.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy \textcolor{red}{(are we generally ok with saying "heavy" throughout as equivalent to "massive"? I probably wouldn't, but if it's standard then ok.)} black holes in X-ray binaries. The answer has to do with the mass loss from massive stars. 
+
+\textbf{The importance of stellar winds:} The intense radiation from massive stars -- whose luminosities may be a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than 1/3 of the initial stellar mass. \textcolor{red}{(adding a sentence or two here to spell out your point!)}   Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity -- the fraction of the star's mass that's in elements heavier than hydrogen and helium -- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Forming heavier black holes, like those observed by LIGO, requires stellar progenitors born in regions with lower metallicity. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
+
+\textbf{Why LIGO sources might come from low-metallicity stars:} Because metals are produced by stars, low-metallicity regions are typically those with fewer preceding stellar generations.  Several plausible scenarios could explain why the LIGO sources came from low-metallicity stars. For the more distant sources, explanations include formation in low-mass metal-poor galaxies, while for relatively local mergers the parent stars could have formed in the very distant past, with a long delay time between star formation and black hole merger \citep{Belczynski:2016}. \textcolor{red}{This issue is discussed in more detail in Section ??? -- which I haven't read in detail yet, so I might have distorted the meaning of this paragraph... sorry!.}
+
+\begin{figure}
+	\centering
+	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
+	\includegraphics[width=0.7\textwidth]{BHremnantdelayed.png}
+	\caption{\label{fig:BHremnant} Remnant compact object mass for a given zero-age main sequence stellar mass in the absence of an interacting binary companion, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' supernova fallback prescription \citep{Fryer:2012}, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).}
+\end{figure}
+%\todo{Include mass plots from Ben, or reuse Chris's old plot?, or attached?}
+
+
+
 The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses matching all observations to date \citep[e.g.,][]{Stevenson:2017}, as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because the more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}.  Dynamical formation in globular clusters can also lead to a range of masses; it may have a stronger preference for more massive binaries as lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}, but the mass distribution would be sensitive to natal kicks which may eject black holes at formation \citep{Zevin:2017}.  Chemically homogeneous evolution is only possible in more massive binaries, with total mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
 
 The masses of merging black hole binaries produced through the classical isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and dynamically unstable reverse mass transfer, though mass ratios exceeding $2:1$ are more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.  Dynamically formed binaries may also prefer comparable mass ratios because the heaviest black holes are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or an intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}.  On the other hand, chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}, with perhaps nearly equal mass black holes resulting from the evolution of systems that went through a contact phase \citep{Marchant:2016}.  
+
+
+\subsection{Merging black hole spins}
 
 The spins of merging black holes may also carry imprints of their evolutionary history.  Isolated binaries are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011}.  Meanwhile, the spin directions are likely to be isotropically distributed for dynamically formed binaries \citep[e.g.,][]{Rodriguez:2016spin}.  
 
@@ -288,8 +293,13 @@ The spin magnitudes may also depend sensitively on the evolutionary history.  Al
 
 Gravitational-wave spin measurements have so far only constrained the average spin component in the direction of the orbital angular momentum (so-called `effective spin'), which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
 
+
+\subsection{Merging black hole environments and delay times}
+
 The evolutionary history of merging black holes is also tied to their formation environments and delay times before merger.  
 The yield of merging black holes per unit star forming mass is greatest at lowest metallicity, due largely to reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010}; for the classical channel, delayed stellar expansion, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.  Most of the low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}.  On the other hand, the delay time between star formation and merger in the classical formation channel peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay.  A convolution of the metallicity-specific star formation history and the delay time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the star formation history of GW150914, which either formed in the first $\sim$ Gyr after the Big Bang with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region, such as a low-mass satellite galaxy.  
+
+\subsection{Merging black hole eccentricities}
 
 Finally, the eccentricity of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}.  While isolated binaries are expected to merge on circular orbits as gravitational waves are very efficient at damping out eccentricity, dynamically formed systems may sometimes retain significant eccentricities if they are already very close at formation.  This may be possible either through two-body captures in Galactic nuclei \citep{OLeary:2008} \citet[but see][]{Tsang:2013}, or through close captures during three-body interactions \citep{Samsing:2014}.
 
