Updating mass plot.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -169,7 +169,7 @@ Some of the observed high-mass X-ray binaries may ultimately produce gravitation
 \begin{figure}
 	\centering
 	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
-	\includegraphics[width=0.99\textwidth]{Graveyard-linear.png}%{BHmass.png}
+	\includegraphics[width=0.99\textwidth]{Graveyard.png}%{BHmass.png}
 	\caption{\label{fig:BHmasses}  The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the merging double neutron star GW170817 (orange) appear at the bottom of the figure.  Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Frank Elavsky, Northwestern University and LIGO-Virgo collaborations.}
 \end{figure}
 
@@ -325,7 +325,7 @@ More observational data sets will further aid in interpreting gravitational-wave
 
 The most useful additional constraints, however, are likely to come from comparing other data sets with gravitational-wave observations and demanding that any evolutionary model must self-consistently explain all of the available data: gravitational-wave observations, X-ray binaries, Galactic neutron stars, gamma ray bursts, supernovae, luminous red novae, etc.   Incorporating these constraints will make it possible to resolve these degeneracies and build a concordance model of massive binary evolution.  %\todo{Other possible gravitational-wave sources? More details / references on XRBs, LRN, etc.?}
 
-The future of gravitational-wave astronomy holds the prospect of addressing the inverse problem of massive binary evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their skeletal remnants, we can now use merging neutron stars and black holes ? remnants of massive stars ? to probe the behaviour of those stars, and particularly their evolution in binaries \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed!
+The future of gravitational-wave astronomy holds the prospect of addressing the inverse problem of massive binary evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their skeletal remnants, we can now use merging neutron stars and black holes --- remnants of massive stars --- to probe the behaviour of those stars, and particularly their evolution in binaries \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed!
 
 
 \begin{acknowledgements}
